Add table of contents.

--- a/mss.tex
+++ b/mss.tex
@@ -39,6 +39,8 @@
 Floating-point calculations are critical to a number of special domains in modern computing, including machine learning, graphics, and scientific computing.  Numerical calculations are particularly subject to opaque and system-local optimizations, which can break certain guarantees for deterministic computers.  We consider the background and implementation of IEEE 754 floating-point arithmetic and options for implementing it compatibly with fully reproducible computing.  We examine hardware-based and software-based proposals.
 \end{abstract}
 
+\tableofcontents
+
 \section{Introduction}
 
 \begin{quote}
