Post a partial revision based on review.

--- a/ustj-fp.bib
+++ b/ustj-fp.bib
@@ -65,6 +65,18 @@ year = 2017,
 url = "https://docs.google.com/document/d/1DY4ImZT1coqri2382GusXgBTTTVdBDvtD5I14QHp9OE/edit#heading=h.jtgipeoidy9",
 }
 
+%  Edelman, Alan (January 1, 1997). "The Mathematics of the Pentium Division Bug" (PDF). SIAM Review. 39 (1): 54–67. Bibcode:1997SIAMR..39...54E. doi:10.1137/S0036144595293959. Retrieved April 11, 2021.
+@article{Edelman1997,
+author = "Alan Edelman",
+title = "The Mathematics of the Pentium Division Bug",
+journal = "SIAM Review",
+volume = 39,
+number = 1,
+year = 1997,
+pages = "54--67",
+doi = "10.1137/S0036144595293959",
+}
+
 @phdthesis{Figueroa2000,
 author = "S. A. Figueroa del Cid",
 title = "A Rigorous Framework for Fully Supporting the {IEEE} Standard for Floating-Point Arithmetic in High-Level Programming Languages",
